    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/principal"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ir_atras"
            android:scaleType="centerCrop"
            android:id="@+id/botonAtras" />

        <TextView
            android:text="@string/selecPuntoOrigenEspañol"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/blanco"
            android:id="@+id/textoElegirOrigen"
            android:gravity="center"
            android:typeface="sans"
            android:fontFamily="casual"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:layout_width="250dp" />

        <ImageButton
            android:layout_height="50dp"
            app:srcCompat="@drawable/ir_alante"
            android:scaleType="centerCrop"
            android:id="@+id/botonAlante"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_width="50dp" />

    </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup">

            <RadioButton
                android:text="@string/num1"
                android:layout_height="110dp"
                android:id="@+id/radioButton19"
                android:textColor="@color/blanco"
                android:background="@color/colorFondoTexto"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="30sp" />

            <RadioButton
                android:text="@string/num2"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:textColor="@color/blanco"
                android:background="@color/colorFondoTexto"
                android:id="@+id/radioButton18"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="30sp" />

            <RadioButton
                android:text="@string/num3"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:textColor="@color/blanco"
                android:background="@color/colorFondoTexto"
                android:id="@+id/radioButton15"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp" />

            <RadioButton
                android:text="@string/num4"
                android:layout_width="match_parent"
                android:id="@+id/radioButton16"
                android:textColor="@color/blanco"
                android:background="@color/colorFondoTexto"
                android:layout_height="110dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp" />

        </RadioGroup>

    </LinearLayout>