<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_visita_guiada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/principal"
    tools:context="com.example.sakrofdez.androidcurse.VisitaGuiada">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ir_atras"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/botonAtras" />

    <Button
        android:text="@string/selecSala4Español"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/botonSala4"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/selecSala3Español"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/botonSala3"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_above="@+id/botonSala4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

    <Button
        android:text="@string/selecSala2Español"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/botonSala2"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_above="@+id/botonSala3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <Button
        android:text="@string/selecSala1Español"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:id="@+id/botonSala1"
        android:layout_below="@+id/botonAtras"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tituloSelecNumeroEspañol"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/blanco"
        android:id="@+id/textoSelSala"
        android:layout_width="300dp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/botonAtras"
        android:layout_toEndOf="@+id/botonAtras" />
</RelativeLayout>
