<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_select_medio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/principal"
    tools:context="com.example.sakrofdez.androidcurse.SelectMedio">

    <Button
        android:text="@string/selecTextoVideoEspañol"
        android:layout_width="400dp"
        android:id="@+id/selectTextoVideo"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tituloSelMedioEspañol"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/blanco"
        android:id="@+id/selecMedio"
        android:fontFamily="casual"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/selecVideoEspañol"
        android:layout_width="400dp"
        android:id="@+id/selectVideo"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_height="120dp"
        android:layout_below="@+id/selectAudio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ir_atras"
        android:scaleType="centerCrop"
        android:id="@+id/volverAtras"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/selecAudioEspañol"
        android:id="@+id/selectAudio"
        android:layout_width="400dp"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_height="130dp"
        android:layout_below="@+id/selecMedio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
