<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_tipo_visita"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/principal"
    tools:context="com.example.sakrofdez.androidcurse.SelectTipoVisita">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ir_atras"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/botonAtras" />

    <TextView
        android:text="@string/tituloSelTipoVisitaEspañol"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/blanco"
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/selecIrPuntoEspañol"
        android:id="@+id/botonPunInteres"
        android:layout_width="400dp"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/selecVisLibreEspañol"
        android:id="@+id/botonVisLibre"
        android:layout_width="400dp"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_height="130dp"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/botonPunInteres"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/selecVisGuiadaEspañol"
        android:id="@+id/botonVisGuiada"
        android:layout_width="400dp"
        android:textColor="@color/blanco"
        android:background="@color/colorFondoTexto"
        android:textSize="21sp"
        android:gravity="center"
        android:typeface="sans"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_height="130dp"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/botonVisLibre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
